Minor spacing adjustments, and slider restyling. Also ensured visual compatibility with Firefox

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,8 @@
 body{
     font-family: 'Orbitron';
     background-color: #140420;
+    width: 100%;
+    height: auto;
 }
 
 
@@ -27,7 +29,8 @@ main {
     color: white;
     display: flex;
     justify-content: center;
-    margin: 40px 0;
+    text-align: center;
+    margin: 5em 0;
 }
 
 
@@ -245,6 +248,7 @@ input[type=range]::-webkit-slider-thumb:hover{
     box-shadow: 0 0 0 8px rgba(199, 5, 84,0.2);
 }
 input[type=range]:active::-webkit-slider-thumb{
+    border: 2px solid cyan;
     box-shadow: 0 0 0 11px rgba(199, 5, 84,0.4);
 }
 
@@ -265,6 +269,7 @@ input[type=range]::-moz-range-thumb:hover{
     box-shadow: 0 0 0 8px rgba(199, 5, 84,0.2);
 }
 input[type=range]:active::-moz-range-thumb{
+    border: 2px solid cyan;
     box-shadow: 0 0 0 11px rgba(199, 5, 84,0.4);
 }
 input[type=range]::-moz-range-progress {
@@ -276,15 +281,21 @@ input[type=range]::-moz-range-progress {
 footer{
     font-size: 14px;
     color: white;
+
+    bottom: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     gap: 10px;
     padding-top: 10px;
+    
+    width: 100%;
     height: 50px;
     border-top: 3px solid;
     border-image: var(--lgradient) 1;
+    
+
 }
 
 .link-icon{
